<resources>
    <string name="app_name">Scrap-O-Food</string>
    <string name="search_your_food">Search Your Food…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="category">Kategorie</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot_loading">...</string>
    <string name="Ingredients">INGREDIENTS</string>

    <string name="titel">Titel</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="erstellen">Inserat erstellen</string>
    <string name="mhd">MHD (MM.DD.YYYY)</string>
    <string name="privat">Privat</string>

    <string name="prompt_category">Wähle eine Kategorie</string>
    <string name="prompt_condition">Wähle den Zustand</string>
    <string name="prompt_storage">Wähle die Lagerung</string>

    <string-array name="Kategorien">
        <item>Getränke</item>
        <item>Nudeln</item>
        <item>Backwaren</item>
        <item>Fleischwaren</item>
        <item>Obst</item>
        <item>Gemüse</item>
        <item>Gekochte Mahlzeiten</item>
        <item>Snacks</item>
        <item>Süßigkeiten</item>
        <item>Milchprodukte</item>
        <item>Gewürze</item>
        <item>Sonstiges</item>
    </string-array>

    <string-array name="Lagerung">
        <item>Offen</item>
        <item>Kühlschrank</item>
        <item>Lichtgeschützt</item>
        <item>Tiefkühler</item>
    </string-array>

    <string-array name="Zustand">
        <item>Geöffnet</item>
        <item>Ungeöffnet</item>
        <item>Frisch zubereitet</item>
        <item>Gefroren</item>
    </string-array>




</resources>
